--- a/echokana-web/package.json
+++ b/echokana-web/package.json
@@ -13,8 +13,11 @@
     "@headlessui/react": "^2.2.3",
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-avatar": "^1.1.9",
+    "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-progress": "^1.1.6",
     "@radix-ui/react-separator": "^1.1.6",
     "@radix-ui/react-tabs": "^1.1.11",
+    "@radix-ui/react-toast": "^1.2.13",
     "@tanstack/react-query": "^5.76.1",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
